force-app/src/objects/TR1__Deduplication_Field_Default__mdt.object
<CustomObject>
    <description>When the Package de-duplication has been disabled, the Standard Salesforce Duplicate Management rules are invoked when a Resume is parsed. In certain instances, customers will need to specify default values before evaluating the Contact records against the Duplicate Rules for example the Record Type. We can use this Custom Metadata to specify Field Defaults in such instances.</description>
    <fields>
        <fullName>TR1__Default_Field_Value__c</fullName>
        <label>Default Field Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TR1__Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Deduplication Field Default</label>
    <pluralLabel>Deduplication Field Defaults</pluralLabel>
</CustomObject>